--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.18.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.11.1",
+    "eslint": "^8.56.0",
+    "github-markdown-css": "^5.5.1",
     "postcss": "^8.4.38",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
