--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,44 +2,43 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
 
-    - name: Install pnpm
-      run: npm install -g pnpm
-      
-    - name: Build
-      run: pnpm install && pnpm build
+      - name: Install pnpm
+        run: npm install -g pnpm
 
-    - name: Clear dist
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.TG_HOST }}
-        username: ${{ secrets.TG_USER }}
-        password: ${{ secrets.TG_PASS }}
-        script: |
-          rm -rf /home/ubuntu/niniix/cssanimation/*
+      - name: Build
+        run: pnpm install && pnpm build
 
-    - name: Deploy
-      uses: cross-the-world/scp-pipeline@master
-      env:
-        WELCOME: "ssh scp ssh pipelines"
-        LASTSSH: "Doing something after copying"
-      with:
-        host: ${{ secrets.TG_HOST }}
-        user: ${{ secrets.TG_USER }}
-        pass: ${{ secrets.TG_PASS }}
-        connect_timeout: 10s
-        local: './dist/*'
-        remote: /home/ubuntu/niniix/cssanimation/
-    
+      - name: Clear dist
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.TG_HOST }}
+          username: ${{ secrets.TG_USER }}
+          password: ${{ secrets.TG_PASS }}
+          script: |
+            rm -rf /home/ubuntu/niniix/cssanimation/*
+
+      - name: Deploy
+        uses: cross-the-world/scp-pipeline@master
+        env:
+          WELCOME: ssh scp ssh pipelines
+          LASTSSH: Doing something after copying
+        with:
+          host: ${{ secrets.TG_HOST }}
+          user: ${{ secrets.TG_USER }}
+          pass: ${{ secrets.TG_PASS }}
+          connect_timeout: 10s
+          local: './dist/*'
+          remote: /home/ubuntu/niniix/cssanimation/
